--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         </form>
                     </div>
                 </div>
-                <partial name="_tag" />
+                <partial name="_tagCloud" />
                 <div class="card mb-1">
                     <div class="card-header">
                         Featured
