--- a/Views/Shared/_post.cshtml
+++ b/Views/Shared/_post.cshtml
@@ -34,10 +34,7 @@
             <div class="card-body">
                 <h5 class="card-title">@item.Title</h5>
                 @Html.Raw(item.Body)
-                @foreach (var tag in item.Tags.Split(','))
-                {
-                    <a href="#" class="btn btn-primary card-link">@tag</a>
-                }
+                <partial name="_tag" model="@item.Tags" />
             </div>
             <div class="card-footer text-muted">
                 Posted on @DateTime.Now.ToString("yyyy-MM-dd") by me
